--- a/tootoo/r4/dev/tootoo4-template-all-in-one.html
+++ b/tootoo/r4/dev/tootoo4-template-all-in-one.html
@@ -65,11 +65,19 @@
 
 	if ( protocol === 'file:' ) {
 
-		firstDot = location.pathname.indexOf( 'github.io' );
-		user = location.pathname.slice( 0, firstDot - 1 );
-		user = user.slice( user.lastIndexOf( '/' ) + 1 );
+		if ( location.pathname.includes( 'github.io' ) ) {
 
-		path = location.pathname.slice( firstDot + 10, location.pathname.lastIndexOf( '/' )  );
+			firstDot = location.pathname.indexOf( 'github.io' );
+			user = location.pathname.slice( 0, firstDot - 1 );
+			user = user.slice( user.lastIndexOf( '/' ) + 1 );
+
+			path = location.pathname.slice( firstDot + 10, location.pathname.lastIndexOf( '/' )  );
+
+		} else {
+
+// tbd
+
+		}
 
 	} else if ( protocol.includes( 'http' ) ) {
 
@@ -86,6 +94,7 @@
 		repo : user + '.github.io',
 		branch : 'master',
 		path : path,
+		rawgit : true
 
 	};
 
