--- a/tootoo/r4/utilities/merge-files-into-one/merge-files-into-one-r2.html
+++ b/tootoo/r4/utilities/merge-files-into-one/merge-files-into-one-r2.html
@@ -161,7 +161,9 @@
 
 	function selectFile(){
 
-		var fileName = '../../dev/tootoo4-basic.html';
+		var fileName = selFile.value.includes( 'all-in-0ne' ) ?
+			 '../../dev/tootoo4-template-all-in-one.html' :
+			 '../../dev/tootoo4-basic.html';
 		requestFile( fileName, callbackHtm );
 
 	}
