--- a/tootoo/r4/utilities/merge-files-into-one/tootoo4-all-in-one-leader-photos.html
+++ b/tootoo/r4/utilities/merge-files-into-one/tootoo4-all-in-one-leader-photos.html
@@ -7,7 +7,7 @@
 <meta name=description content='Browse and view files on GitHub with remarkable ease.' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
 
-<meta name=date content='2017-5-30 16:16' >
+<meta name=date content='2017-5-30 16:29' >
 
 <!--
 
@@ -796,39 +796,195 @@ console.log( '', response  );
 <script src=../dev-repo/repo-prediqtiv.js ></script>
 -->
 <script>
-// repo-all-in-one.js inserted
+// repo-leader-photos.js inserted
 
 
-	let protocol, user, firstDot, path;
 
-	protocol = location.protocol;
 
-	if ( protocol === 'file:' ) {
-
-		firstDot = location.pathname.indexOf( 'github.io' );
-		user = location.pathname.slice( 0, firstDot - 1 );
-		user = user.slice( user.lastIndexOf( '/' ) + 1 );
-
-		path = location.pathname.slice( firstDot + 10, location.pathname.lastIndexOf( '/' )  );
-
-	} else if ( protocol.includes( 'http' ) ) {
-
-		firstDot = location.hostname.indexOf( '.github.io' );
-		user = location.hostname.slice( 0, firstDot );
-		path = location.pathname.slice( 1, location.pathname.lastIndexOf( '/' )  );
-
-	}
-
-//console.log( 'u', user, 'p', path );
-
-	user = {
-		user : user,
-		repo : user + '.github.io',
+	var user = {
+		user : 'leaderphotos',
+		repo : 'leaderphotos.github.io',
 		branch : 'master',
-		path : path,
-
+		path :'',
+		defaultFile : 'README.md'
 	};
-</script>
+
+
+	MNU.tableOfContents =
+`
+### Leader Photos
+* [Read Me]( #README.md )
+
+
+### Australia
+* [Australian Cowboys]( #!albums/Australia/australian-cowboys )
+* [Australian Station Girl]( #!albums/Australia/australian-station-girl )
+### Balkans war
+* [Bosnia BW]( #!albums/Balkans-war/Bosniabw )
+* [Kosovar Refugees Albania]( #!albums/Balkans-war/kosovar-refugees-albania )
+* [Roma Kosovo]( #!albums/Balkans-war/romakosovo )
+* [Romany Gypsies Exodus Balkans]( #!albums/Balkans-war/romany-gypsies-exodus-balkans )
+### Britain
+* [Bonfire Season]( #!albums/Britain/bonfireseason )
+* [Castles Scotland]( #!albums/Britain/castles-scotland )
+* [Dublin]( #!albums/Britain/dublin )
+* [Early Years]( #!albums/Britain/early-years )
+* [Ireland West Coast]( #!albums/Britain/irelandwestcoast )
+* [Staffs]( #!albums/Britain/staffs )
+### Cities Tourism
+* [London]( #!albums/Citiestourism/London )
+* [Castore]( #!albums/Citiestourism/castore )
+* [Ibiza Nite Fever]( #!albums/Citiestourism/ibizanitefever )
+* [Paris]( #!albums/Citiestourism/paris )
+### Gypsies
+* [Bucharest Belgrade]( #!albums/Gypsies/Bucharest-Belgrade )
+* [Roma Recycling]( #!albums/Gypsies/Roma-recycling )
+* [Finland Roma]( #!albums/Gypsies/finlandroma )
+* [Gitanos Almeria Spain]( #!albums/Gypsies/gitanos-almeria-spain )
+* [Gypsies France]( #!albums/Gypsies/gypsies-france )
+* [Roma Lyon]( #!albums/Gypsies/roma-lyon )
+* [Romany Gypsies England]( #!albums/Gypsies/romany-gypsies-england )
+* [Romany Refugees Across Europe]( #!albums/Gypsies/romany-refugees-across-europe )
+* [Roma Poland]( #!albums/Gypsies/romapoland )
+* [Roma Texas]( #!albums/Gypsies/romatexas )
+* [Roma Travellers Forum]( #!albums/Gypsies/romatravellersforum )
+* [Roma Turkey Greece]( #!albums/Gypsies/romaturkeygreece )
+* [Roma Vilhelm Covaci]( #!albums/Gypsies/romavilhelmcovaci )
+* [Slovakia Roma]( #!albums/Gypsies/slovakiaroma )
+### Paris Student Demonstrations
+* [Paris Student Demonstration 31 03 2006]( #!albums/Parisstudentdemonstrations/Parisstudentdemonstration31-03-2006 )
+* [Paris General Strike]( #!albums/Parisstudentdemonstrations/parisgeneralstrike )
+### Sainte Sara
+* [Sainte Sara]( #!albums/Sainte-Sara )
+### Spanish Spring Festivals
+* [Feria Sevilla]( #!albums/Spanish-Spring-Festivals/Feria-Sevilla )
+* [Semana Santa]( #!albums/Spanish-Spring-Festivals/Semana-Santa )
+* [El Rocio]( #!albums/Spanish-Spring-Festivals/el-rocio )
+### Tropical Rainforests
+* [Deforestation]( #!albums/Tropical-Rainforests/Deforestation )
+* [Album01]( #!albums/Tropical-Rainforests/album01 )
+* [Yanomani Deforestation]( #!albums/Tropical-Rainforests/yanomani-deforestation )
+### Art Commissions
+* [Artists]( #!albums/artcommissions/artists )
+* [Joachim Ecklwasser]( #!albums/artcommissions/joachimecklwasser )
+### Batak
+* [Batak]( #!albums/batak )
+### Bits
+* [Bits]( #!albums/bits )
+### Black and white
+* [Bosnia Balkans 1994]( #!albums/black-and-white/bosnia-balkans-1994 )
+* [Central America]( #!albums/black-and-white/central-america )
+* [Deforestation Seasia]( #!albums/black-and-white/deforestation-seasia )
+* [Early Years]( #!albums/black-and-white/earlyyears )
+* [Staffordshire England]( #!albums/black-and-white/staffordshire-england )
+* [Street Children Ca]( #!albums/black-and-white/street-children-ca )
+### Central America
+* [Guatemala]( #!albums/centralamerica/guatemala )
+* [Guatemala BW]( #!albums/centralamerica/guatemalabw )
+* [Street Children]( #!albums/centralamerica/streetchildren )
+* [Todos Santos]( #!albums/centralamerica/todossantos )
+### Chernobyl
+* [Chernobyl]( #!albums/chernobyl )
+### Classic Powerboats
+* [Motorboat]( #!albums/classicpowerboats/motorboat )
+* [Powerboat]( #!albums/classicpowerboats/powerboatp1 )
+### Climate
+* [Hurricane Mitch]( #!albums/climate/hurricanemitch )
+### Cuisine
+* [Bras]( #!albums/cuisine/bras )
+* [Genoa]( #!albums/cuisine/genoa )
+* [Lasserre]( #!albums/cuisine/lasserre )
+* [Nice]( #!albums/cuisine/nice )
+* [Rostang]( #!albums/cuisine/rostang )
+### Elements
+* [Fire]( #!albums/elements/fire )
+### Food
+* [Chasse au Sanglier]( #!albums/food/chasseausanglier )
+* [Meat]( #!albums/food/meat )
+* [Meat Book]( #!albums/food/meatbook )
+### Forests
+* [Forests Aerial France]( #!albums/forests/forestsaerialfrance )
+* [Paris Nature]( #!albums/forests/paris-nature )
+### Hans Peter
+* [Hans Peter]( #!albums/hanspeter2 )
+### Home Page Photos
+* [Home Page Photos]( #!albums/homepagephotos )
+### Horses
+* [Fantasia]( #!albums/horses/fantasia )
+* [Romany]( #!albums/horses/romany )
+* [Todos Santos New]( #!albums/horses/todossantosnew )
+### Leader Photos
+* [Bartholomew Orthodox Turkey]( #!albums/leaderphotos/bartholomeworthodoxturkey )
+* [Panorama FB]( #!albums/leaderphotos/panoramafb )
+### Music
+* [Goran Bregovic]( #!albums/music/goranbregovic )
+* [Goran Bregovic Kristjan Jarvi]( #!albums/music/goranbregovickristjanjarvi )
+### Nigel Dickinson Portraits
+* [Nigel Dickinson Portraits]( #!albums/nigel_dickinson_portraits )
+### Nigeria
+* [Coupe Decale au Bataclan]( #!albums/nigeria/Coupe-Decaleaubataclan )
+* [Hausa Animist Ritual]( #!albums/nigeria/hausa-animist-ritual )
+* [Kano Durbar Fantasia]( #!albums/nigeria/kano-durbar-fantasia )
+* [Sharia Kano Nigeria]( #!albums/nigeria/sharia-kano-nigeria )
+* [Yopougon]( #!albums/nigeria/yopougon )
+### Outdoors
+* [Sinai Desert Trek]( #!albums/outdoors/sinai-desert-trek )
+### Partyrave
+* [Techno]( #!albums/partyrave/techno )
+### Peopleportraits
+* [John Travolta Jumbo Jet]( #!albums/peopleportraits/John-travolta-jumbo-jet )
+* [Portraits]( #!albums/peopleportraits/portraits )
+### Periphery Host
+* [Periphery]( #!albums/peripheryhost/periphery )
+### Places
+* [Corsica Fire Ice Water]( #!albums/places/corsica-fire-ice-water )
+* [Nino Emma Corretti Soglio]( #!albums/places/nino-emma-corretti-soglio )
+### Pollution and Environment
+* [Pollution Danube]( #!albums/pollutionandenvironment/pollutiondanube )
+* [Road Protest]( #!albums/pollutionandenvironment/road-protest )
+### Religions
+* [Animist Africa]( #!albums/religions/animistafrica )
+* [Buddhism France]( #!albums/religions/buddhismfrance )
+* [El Rocio Spain]( #!albums/religions/elrociospain )
+* [Gypsy Pilgrimmage]( #!albums/religions/gypsypilgrimmage )
+* [Semana Santa]( #!albums/religions/semanasanta )
+### Ridiculous
+* [Fish Circus]( #!albums/ridiculous/fishcircus )
+### Roma Expo
+* [Moving Walls]( #!albums/romaexpo/movingwalls )
+* [Roma40]( #!albums/romaexpo/roma40 )
+### Saintes Maries
+* [Sara le pelerinage des gitans]( #!albums/saintesmaries/Saralepelerinagedesgitans )
+* [Gypsies and guardians Saintes Maries]( #!albums/saintesmaries/gypsiesandguardianssaintesmaries )
+* [Gypsy Camps Saintes Maries]( #!albums/saintesmaries/gypsycampssaintesmaries )
+* [Gypsy Music Dance Bears]( #!albums/saintesmaries/gypsymusicdancebears )
+* [Manitas]( #!albums/saintesmaries/manitas )
+* [Sainte Sara]( #!albums/saintesmaries/saintesara )
+* [Saintes Maries Aerial]( #!albums/saintesmaries/saintesmariesaerial )
+* [Saintes Maries Church]( #!albums/saintesmaries/saintesmarieschurch )
+### Sarawak
+* [Sarawak]( #!albums/sarawak )
+### Sebastian
+* [Sebastian]( #!albums/sebastian )
+* [Sebastian 2]( #!albums/sebastian02 )
+* [Sebastian Portraits]( #!albums/sebastianportraits )
+### Vilhelm Covaci
+* [Vilhelm Covaci]( #!albums/Vilhelm-Covaci )
+### Weddings
+* [Mariage Yann Anne Sophie]( #!albums/weddings/mariageyannannesophie )
+
+`;
+
+
+
+	CON.massageText = function( response ){
+
+		CON.converter = new showdown.Converter();
+		text = CON.converter.makeHtml( response );
+
+		return text;
+
+	};</script>
 
 	<div id=container >
 
