--- a/tootoo/r4/dev-test/tootoo4-prediqtiv.html
+++ b/tootoo/r4/dev-test/tootoo4-prediqtiv.html
@@ -4,7 +4,7 @@
 <meta charset=utf-8 >
 <title>TooToo4 Basic</title>
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
-<meta name=description content='Default: Browse and view files on GitHub with remarkable ease.' >
+<meta name=description content='Browse and view files on GitHub with remarkable ease.' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
 
 <meta name=date content='2017-05-29' >
@@ -17,7 +17,10 @@
 <script src=../dev/tootoo4.js ></script>
 <script src=../dev/menu4.js ></script>
 <script src=../dev/contents4.js ></script>
-<script src=../dev-repo/repo-pushme-pullyou.js ></script>
+<!--
+<script src=../dev-repo/repo-prediqtiv.js ></script>
+-->
+<script src=../dev-repo/repo-prediqtiv.js ></script>
 
 	<div id=container >
 
@@ -28,7 +31,7 @@
 					<a href=http://pushme-pullyou.github.io title="pushMe pullYou - your Github repo happy place" > &#x2766 </a><br>
 -->
 				<a id=mnuTitle href="" title="Click here to refresh this page" ></a>
-				<a id=mnuHelp href=https://github.com/pushme-pullyou onmouseover=popHelp.style.display=""; onmouseout=popHelp.style.display="none"; > &#x24D8; </a>
+				<a id=mnuInfoLink href=https://github.com/pushme-pullyou onmouseover=popHelp.style.display=""; onmouseout=popHelp.style.display="none"; > &#x24D8; </a>
 			</h2>
 
 			<div class=popUp id=popHelp style=display:none; ><p>Hi there!</p>Click the i-in-circle, info icon for latest updates.</div>
@@ -68,7 +71,7 @@
 
 		let tagLine;
 
-		mnuHelp.href = user.help ? user.help : 'https://github.com/pushme-pullyou';
+		mnuInfoLink.href = user.help ? user.help : 'https://github.io/pushme-pullyou';
 
 		tagLine = user.tagLine ? user.tagLine : document.head.querySelector( "[name=description]" ).content;
 
