--- a/tootoo/r4/dev-test/tootoo4-all-innn-one.html
+++ b/tootoo/r4/dev-test/tootoo4-all-innn-one.html
@@ -17,8 +17,10 @@
 <script src=../dev/tootoo4.js ></script>
 <script src=../dev/menu4.js ></script>
 <script src=../dev/contents4.js ></script>
+<!--
+<script src=../dev-repo/repo-pushme-pullyou.js ></script>
+-->
 <script src=../dev-repo/repo-all-in-one.js ></script>
-
 
 	<div id=container >
 
