--- a/tootoo/r4/utilities/merge-files-into-one/tootoo4-all-in-one-all-in-one.html
+++ b/tootoo/r4/utilities/merge-files-into-one/tootoo4-all-in-one-all-in-one.html
@@ -4,10 +4,10 @@
 <meta charset=utf-8 >
 <title>TooToo4 Basic</title>
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
-<meta name=description content='Browse and view files on GitHub with remarkable ease.' >
+<meta name=description content='Default: Browse and view files on GitHub with remarkable ease.' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
 
-<meta name=date content='2017-5-30 16:29' >
+<meta name=date content='2017-5-31 15:55' >
 
 <!--
 
@@ -86,6 +86,8 @@ summary h3 { display: inline; }
 
 	TOO.initUser = function() {
 
+// if not, then overwrites. Fix this!
+
 		if ( window.self !== window.top ) { container.style.left = '-325px'; }
 
 		window.addEventListener( 'resize', TOO.setContentsWidth, false );
@@ -94,9 +96,11 @@ summary h3 { display: inline; }
 
 		window.addEventListener ( 'hashchange', TOO.onHashChange, false );
 
-		if ( location.protocol === 'bbb file:' ) {
+		if ( location.protocol === 'file:' ) { // can help with local testing. Needs work.
 
-			TOO.urlGHPages = './';
+			pathFull1 = user.path.replace( /-/g, '' ).replace( /\w+/g, '..' ) + '/';
+			pathFull = pathFull1 === '/' ? './' : pathFull1;
+			TOO.urlGHPages = pathFull;
 
 		} else if ( user.rawgit ) {
 
@@ -117,7 +121,7 @@ summary h3 { display: inline; }
 		MNU.init();
 
 		TOO.setMenu = MNU.tableOfContents !== undefined ? TOO.setMenuContents : TOO.setMenuDefault;
-		TOO.setMenu( user.folder );
+		TOO.setMenu( user.path );
 
 	}
 
@@ -130,7 +134,7 @@ summary h3 { display: inline; }
 		TOO.path = path;
 
 		url = 'https://api.github.com/repos/' + user.user + '/' + user.repo + '/contents/' + ( path ? path : '' );
-
+console.log( 'url', url );
 		menuTitle.innerHTML = 'All Files';
 		TOO.setBreadcrumbs( path );
 
@@ -173,7 +177,7 @@ summary h3 { display: inline; }
 			if ( item.type === 'file' ) {
 
 				menuItems.innerHTML +=
-					'<a id=file' + count++ + ' href=#' + item.path + ' style=width:100%;  > ' + item.name + '</a>' + b +
+					'<a id=file' + count++ + ' href=#' + encodeURI( item.path ) + ' style=width:100%;  > ' + item.name + '</a>' + b +
 				'';
 
 				TOO.files.push( item.path );
@@ -190,7 +194,7 @@ summary h3 { display: inline; }
 
 			CON.getFileSetContents( location.hash.slice( 1 ) );
 
-		} else if ( user.defaultFile !== undefined && user.folder === TOO.path ) {
+		} else if ( user.defaultFile !== undefined && user.path === TOO.path ) {
 
 			CON.getFileSetContents( user.defaultFile );
 
@@ -250,7 +254,7 @@ summary h3 { display: inline; }
 
 			CON.getFileSetContents( location.hash.slice( 1 )  );
 
-//		} else if ( user.defaultFile !== undefined && user.folder === TOO.path ) {
+//		} else if ( user.defaultFile !== undefined && user.path === TOO.path ) {
 		} else if ( user.defaultFile !== undefined ) {
 
 			CON.getFileSetContents( user.defaultFile );
@@ -295,7 +299,7 @@ summary h3 { display: inline; }
 
 		name = user.repo;
 
-		name = user.folder ? user.folder : user.repo;
+//		name = user.path ? user.path : user.repo;
 
 		txt = '<h3><a href=JavaScript:TOO.setMenuDefault(); >' + name + '</a> &raquo; </h3>';
 
@@ -554,7 +558,7 @@ summary h3 { display: inline; }
 
 			CON.getFileHTML( url );
 
-		} else if ( u.endsWith( '.gif' ) || u.endsWith( '.ico' ) || u.endsWith( '.jpg' ) || u.endsWith( '.png' ) ||  u.endsWith( '.svg' ) ) {
+		} else if ( u.endsWith( '.gif' ) || u.endsWith( '.ico' ) || u.endsWith( '.jpg' ) || u.endsWith( '.jpeg' ) || u.endsWith( '.png' ) ||  u.endsWith( '.svg' ) ) {
 
 			CON.getFileImage( url );
 
@@ -792,44 +796,53 @@ console.log( '', response  );
 
 	}
 </script>
-<!--
-<script src=../dev-repo/repo-prediqtiv.js ></script>
--->
 <script>
-// repo-ladybug-web.js inserted
+// repo-all-in-one.js inserted
 
-	var user = {
-		user : 'ladybug-tools',
-		subText : 'Browse & view stuff on Ladybug Web real fast!',
-		repo : 'ladybug-web',
-		rawgit: true,
-		branch : 'gh-pages',
 
-		path : '',
+//	let protocol, firstDot, path;
+
+	protocol = location.protocol;
+
+	if ( protocol === 'file:' ) {
+
+		if ( location.pathname.includes( 'github.io' ) ) {
+
+			firstDot = location.pathname.indexOf( 'github.io' );
+			user = location.pathname.slice( 0, firstDot - 1 );
+			user = user.slice( user.lastIndexOf( '/' ) + 1 );
+			repo = user + '.github.io';
+
+			path = location.pathname.slice( firstDot + 10, location.pathname.lastIndexOf( '/' )  );
+
+		} else if ( location.pathname.includes( 'github.com' ) ) {
+
+			firstDot = location.pathname.indexOf( 'github.com' );
+			user = location.pathname.slice( 0, firstDot - 1 );
+			user = user.slice( user.lastIndexOf( '/' ) + 1 );
+			repo = user + '.github.com';
+			path = location.pathname.slice( firstDot + 11, location.pathname.lastIndexOf( '/' )  );
+		}
+
+	} else if ( protocol.includes( 'http' ) ) {
+
+		firstDot = location.hostname.indexOf( '.github.io' );
+		user = location.hostname.slice( 0, firstDot );
+		path = location.pathname.slice( 1, location.pathname.lastIndexOf( '/' )  );
+
+	}
+
+// console.log( 'u', user, 'p', path );
+
+//	MNU.tableOfContents = '';
+
+	user = {
+		user : user,
+		repo : repo,
+		branch : 'master',
+		path : path,
+		tagLine : 'testing',
 	};
-
-
-	MNU.tableOfContents =
-`## Ladybug Web
-
-[Ladybug Web Read Me]( #readme.md )
-
-### Analemma 3D
-[Annalema 3D Read Me]( #analemma-3d/readme.md )
-
-### Ladybug Web Solar Calculator
-[Solar Calculator Read me]( #solar-calculator-ladybug-web/readme.md)
-[Solar Calculator](  #solar-calculator-ladybug-web/solar-calculator-ladybug-web-viewer-r3.html )
-#### Agafonkin
-[Agafonkin Solar Calculator Read Me]( #solar-calculator-agafonkin/readme.md )
-[Agafonkin Solar Calculator]( #solar-calculator-agafonkin/suncalc-sandbox-r7.html )
-#### Bostock
-[Bostock Solar Calculator Read Me]( #solar-calculator-bostock/readme.md )
-[Bostock Solar Calculator]( #solar-calculator-bostock/bostock-solar-calculator-viewer-r5.html )
-#### NOAA
-[NOAA Solar Calculator Read Me]( #solar-calculator-noaa/readme.md )
-[NOAA Solar Calculator]( #solar-calculator-noaa/ladybug-web-solar-calculator-noaa-viewer-r3.html )
-`;
 
 	CON.massageText = function( response ){
 
@@ -845,9 +858,11 @@ console.log( '', response  );
 		<div id=menu >
 
 			<h2>
-				<a href=http://pushme-pullyou.github.io title="pushMe pullYou - your Github repo happy place" > &#x2766 </a><br>
+<!--
+					<a href=http://pushme-pullyou.github.io title="pushMe pullYou - your Github repo happy place" > &#x2766 </a><br>
+-->
 				<a id=mnuTitle href="" title="Click here to refresh this page" ></a>
-				~ <a href=https://github.com/pushme-pullyou onmouseover=popHelp.style.display=""; onmouseout=popHelp.style.display="none"; > &#x24D8; </a>
+				<a id=mnuHelp href=https://github.com/pushme-pullyou onmouseover=popHelp.style.display=""; onmouseout=popHelp.style.display="none"; > &#x24D8; </a>
 			</h2>
 
 			<div class=popUp id=popHelp style=display:none; ><p>Hi there!</p>Click the i-in-circle, info icon for latest updates.</div>
@@ -887,7 +902,10 @@ console.log( '', response  );
 
 		let tagLine;
 
+		mnuHelp.href = user.help ? user.help : 'https://github.com/pushme-pullyou';
+
 		tagLine = user.tagLine ? user.tagLine : document.head.querySelector( "[name=description]" ).content;
+
 		mnuTitle.innerHTML = user.title ? user.title : user.user;
 		mnuTagline.innerHTML = '<small><p>' + tagLine + '</p></small>';
 
