--- a/tootoo/r4/skim/tootoo4-skim-00.html
+++ b/tootoo/r4/skim/tootoo4-skim-00.html
@@ -2,9 +2,9 @@
 <html lang=en >
 <head>
 <meta charset=utf-8 >
-<title>TooToo4 Basic</title>
+<title>TooToo4 Skim</title>
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
-<meta name=description content='Default: Browse and view files on GitHub with remarkable ease.' >
+<meta name=description content='Browse and view files on GitHub at faster files per hour.' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
 
 <meta name=date content='2017-05-29' >
@@ -14,22 +14,20 @@
 </head>
 <body>
 <script src=https://cdn.rawgit.com/showdownjs/showdown/master/dist/showdown.min.js ></script>
-
 <script src=../dev/tootoo4.js ></script>
 <script src=../dev/menu4.js ></script>
+<script src=../dev/select-users4.js ></script>
 <script src=../dev/contents4.js ></script>
-<script src=../dev-repo/repo-pushme-pullyou.js ></script>
+
 
 	<div id=container >
 
 		<div id=menu >
 
 			<h2>
-<!--
-					<a href=http://pushme-pullyou.github.io title="pushMe pullYou - your Github repo happy place" > &#x2766 </a><br>
--->
+				<a href=http://pushme-pullyou.github.io title="pushMe pullYou - your Github repo happy place" > &#x2766 </a><br>
 				<a id=mnuTitle href="" title="Click here to refresh this page" ></a>
-				<a id=mnuHelp href=https://github.com/pushme-pullyou onmouseover=popHelp.style.display=""; onmouseout=popHelp.style.display="none"; > &#x24D8; </a>
+				~ <a href=index.html#README.md onmouseover=popHelp.style.display=""; onmouseout=popHelp.style.display="none"; > &#x24D8; </a>
 			</h2>
 
 			<div class=popUp id=popHelp style=display:none; ><p>Hi there!</p>Click the i-in-circle, info icon for latest updates.</div>
@@ -63,20 +61,16 @@
 
 // Copyright 2017 Pushme Pullyou authors ~ MIT license
 
+	let user = {};
+
 	init();
 
 	function init() {
 
-		let tagLine;
+		mnuTitle.innerHTML = document.title;
+		mnuTagline.innerHTML = '<small><p>' + document.head.querySelector( "[name=description]" ).content + '</p></small>';
 
-		mnuHelp.href = user.help ? user.help : 'https://github.com/pushme-pullyou';
-
-		tagLine = user.tagLine ? user.tagLine : document.head.querySelector( "[name=description]" ).content;
-
-		mnuTitle.innerHTML = user.title ? user.title : user.user;
-		mnuTagline.innerHTML = '<small><p>' + tagLine + '</p></small>';
-
-		TOO.initUser();
+		SEL.initSelectUsers();
 
 	}
 
