--- a/tootoo/r4/library-ladybug/tootoo4-library-ladybug.html
+++ b/tootoo/r4/library-ladybug/tootoo4-library-ladybug.html
@@ -53,12 +53,14 @@
 		<div id=butNextFile >&gt;</div>
 		<div id=butPreviousFile >&lt;</div>
 
-
 	</div>
 
 <script >
 
 // Copyright 2017 Pushme Pullyou authors ~ MIT license
+
+	let urlAPIFolderRepos = 'https://api.github.com/repos/pushme-pullyou/pushme-pullyou.github.io/contents/tootoo/r4/dev-ladybug/';
+
 
 	init();
 
@@ -69,8 +71,8 @@
 
 		SEL.initSelectRepos();
 
-
 	}
+
 
 </script>
 </body>
