--- a/tootoo/r4/library-ladybug/tootoo4-library-ladybug.html
+++ b/tootoo/r4/library-ladybug/tootoo4-library-ladybug.html
@@ -2,7 +2,7 @@
 <html lang=en >
 <head>
 <meta charset=utf-8 >
-<title>TooToo4 Library</title>
+<title>TooToo4 Library Library</title>
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
 <meta name=description content='Browse and view files on GitHub with remarkable ease.' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
@@ -51,15 +51,17 @@
 
 		<div id=butEditFile >Edit</div>
 		<div id=butNextFile >&gt;</div>
-		<div id=butPreviousFile >&lt;</div>
+		<div id=butPreviousFile ><</div>
 
 	</div>
 
-<script >
+<script>
 
 // Copyright 2017 Pushme Pullyou authors ~ MIT license
 
-	let urlAPIFolderRepos = 'https://api.github.com/repos/pushme-pullyou/pushme-pullyou.github.io/contents/tootoo/r4/dev-ladybug/';
+//	var user = {};
+
+	urlAPIFolderRepos = 'https://api.github.com/repos/pushme-pullyou/pushme-pullyou.github.io/contents/tootoo/r4/dev-ladybug/';
 
 
 	init();
