--- a/tootoo/r4/library-ladybug/tootoo4-library-ladybug.html
+++ b/tootoo/r4/library-ladybug/tootoo4-library-ladybug.html
@@ -62,7 +62,7 @@
 //	var user = {};
 
 	urlAPIFolderRepos = 'https://api.github.com/repos/pushme-pullyou/pushme-pullyou.github.io/contents/tootoo/r4/dev-ladybug/';
-
+	folderRepo = '../dev-ladybug/';
 
 	init();
 
