--- a/tootoo/r4/dev-test/tootoo4-ladybug-web.html
+++ b/tootoo/r4/dev-test/tootoo4-ladybug-web.html
@@ -17,46 +17,8 @@
 <script src=../dev/tootoo4.js ></script>
 <script src=../dev/menu4.js ></script>
 <script src=../dev/contents4.js ></script>
+<script src=../dev/html.js ></script>
 <script src=../dev-repo/repo-ladybug-web.js ></script>
-
-	<div id=container >
-
-		<div id=menu >
-
-			<h2>
-<!--
-					<a href=http://pushme-pullyou.github.io title="pushMe pullYou - your Github repo happy place" > &#x2766 </a><br>
--->
-				<a id=mnuTitle href="" title="Click here to refresh this page" ></a>
-				<a id=mnuInfoLink href=https://github.com/pushme-pullyou onmouseover=popHelp.style.display=""; onmouseout=popHelp.style.display="none"; > &#x24D8; </a>
-			</h2>
-
-			<div class=popUp id=popHelp style=display:none; ><p>Hi there!</p>Click the i-in-circle, info icon for latest updates.</div>
-
-			<div id=mnuTagline ><small></small></div>
-
-			<div id=mnuSelect ></div>
-
-			<div id=mnuContents ></div>
-
-			<div id=mnuSettings ></div>
-			<div id=mnuCount ></div>
-			<div id=mnuAbout ></div>
-
-		</div>
-
-		<div id=hamburger onclick=container.style.left=container.style.left===""?"-325px":""; >
-			<div id=bars title="Click this hamburger to slide the menu" > &#9776 </div>
-		</div>
-
-		<div id=contents ></div>
-
-		<div id=butEditFile >Edit</div>
-		<div id=butNextFile >&gt;</div>
-		<div id=butPreviousFile >&lt;</div>
-
-
-	</div>
 
 <script >
 
@@ -66,9 +28,13 @@
 
 	function init() {
 
+		container = document.body.appendChild( document.createElement( 'div' ) );
+		container.id = 'container';
+		container.innerHTML = basicHTML;
+
 		let tagLine;
 
-		mnuInfoLink.href = user.help ? user.help : 'https://github.io/pushme-pullyou';
+		mnuHelp.href = user.help ? user.help : 'https://github.com/pushme-pullyou';
 
 		tagLine = user.tagLine ? user.tagLine : document.head.querySelector( "[name=description]" ).content;
 
@@ -76,6 +42,7 @@
 		mnuTagline.innerHTML = '<small><p>' + tagLine + '</p></small>';
 
 		TOO.initUser();
+
 
 	}
 
