--- a/tootoo/r4/library-ladybug/tootoo4-library-ladybug.html
+++ b/tootoo/r4/library-ladybug/tootoo4-library-ladybug.html
@@ -14,11 +14,14 @@
 </head>
 <body>
 <script src=https://cdn.rawgit.com/showdownjs/showdown/master/dist/showdown.min.js ></script>
+
 <script src=../dev/tootoo4.js ></script>
 <script src=../dev/menu4.js ></script>
 <script src=../dev/select-users4.js ></script>
 <script src=../dev/contents4.js ></script>
+<script src=../dev/html.js ></script>
 
+<!--
 	<div id=container >
 
 		<div id=menu >
@@ -54,6 +57,7 @@
 		<div id=butPreviousFile ><</div>
 
 	</div>
+-->
 
 <script>
 
@@ -68,10 +72,14 @@
 
 	function init() {
 
-		mnuTitle.innerHTML = document.title;
-		mnuTagline.innerHTML = '<small><p>' + document.head.querySelector( "[name=description]" ).content + '</p></small>';
+		container = document.body.appendChild( document.createElement( 'div' ) );
+		container.id = 'container';
+		container.innerHTML = basicHTML;
 
 		SEL.initSelectRepos();
+
+
+
 
 	}
 
